# backend/src/api/openapi.rs
@@ -17,7 +17,6 @@ pub fn create_openapi_spec() -> utoipa::openapi::OpenApi {
         contact(name = "CoopData Team", email = "support@coopdata.org")
     ),
     paths(
-        api_module::handlers::apex::resend_apex_member_verification,
         api_module::handlers::health_check,
         api_module::handlers::list_organizations,
         api_module::handlers::get_organization,
@@ -48,6 +47,8 @@ pub fn create_openapi_spec() -> utoipa::openapi::OpenApi {
         api_module::handlers::apex::add_apex_member,
         api_module::handlers::apex::list_apex_members,
         api_module::handlers::apex::remove_apex_member,
+        api_module::handlers::apex::update_apex_member,
+        api_module::handlers::apex::resend_apex_member_verification,
         api_module::handlers::cooperative::create_cooperative,
         api_module::handlers::cooperative::list_cooperatives,
         api_module::handlers::cooperative::get_cooperative,
@@ -56,6 +57,9 @@ pub fn create_openapi_spec() -> utoipa::openapi::OpenApi {
         api_module::handlers::cooperative::add_cooperative_member,
         api_module::handlers::cooperative::list_cooperative_members,
         api_module::handlers::cooperative::remove_cooperative_member,
+        api_module::handlers::cooperative::update_cooperative_member,
+        api_module::handlers::cooperative::resend_cooperative_member_verification,
+        api_module::handlers::cooperative::get_apex_profile,
         api_module::handlers::me::get_current_user_profile,
         api_module::handlers::me::change_password,
         api_module::handlers::federation::get_federation_profile,
@@ -93,6 +97,7 @@ pub fn create_openapi_spec() -> utoipa::openapi::OpenApi {
         api_module::dto::invitation::InvitationResponse,
         api_module::dto::member::AddMemberRequest,
         api_module::dto::member::MemberResponse,
+        api_module::dto::member::UpdateMemberRequest,
         api_module::dto::member::UserProfileResponse,
         api_module::dto::member::ChangePasswordRequest,
         api_module::dto::member::ChangePasswordResponse,
